@startuml
entity "Transactions" as Transactions {
    * transaction_id : UUID
    * user_id : UUID
    * product_id : UUID
    * date_id : Date
    * amount : Decimal
}

entity "Users" as Users {
    * user_id : UUID
    * name : String
    * email : String
    * city : String
    * birthdate : Date
}

entity "Products" as Products {
    * product_id : UUID
    * product_name : String
    * category : String
    * price : Decimal
}

entity "Date" as Date {
    * date_id : Date
    * year : Integer
    * month : Integer
    * day : Integer
    * weekday : String
}

Transactions }|--o{ Users : "user_id"
Transactions }|--o{ Products : "product_id"
Transactions }|--o{ Date : "date_id"

@enduml
